--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "webpack program",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "start": "webpack-dev-server --inline --hot --mode development"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,17 @@
   },
   "homepage": "https://github.com/comlewod/Hercules#readme",
   "devDependencies": {
+    "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.0.6",
     "nodemon": "^1.17.2",
-    "webpack": "^4.1.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "babel-loader": "^7.1.4",
+    "express": "^4.16.3",
+    "react": "^16.2.0"
   }
 }
