--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "dependencies": {
     "babel-loader": "^7.1.4",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "react": "^16.2.0"
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.20.3"
   }
 }
