--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.0.6",
+    "mini-css-extract-plugin": "^0.2.0",
     "nodemon": "^1.17.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
