--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "babel-loader": "^7.1.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "history": "^4.7.2",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "react": "^16.3.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.3"
   }
 }
