--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "babel-loader": "^7.1.4",
+    "bundle-loader": "^0.5.6",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "history": "^4.7.2",
