--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon bin/www",
-    "build": "webpack",
-    "fe-dev": "nodemon NODE_ENV=production webpack.dev.js",
+    "build": "NODE_ENV=production webpack",
+    "fe-dev": "node webpack.dev.js",
     "start": "webpack-dev-server --devtool eval --inline --hot --colors --mode development"
   },
   "repository": {
@@ -32,13 +32,14 @@
     "webpack-cli": "^2.0.12",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.1",
-    "webpack-hot-middleware": "^2.24.2"
+    "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
     "babel-loader": "^7.1.4",
     "bundle-loader": "^0.5.6",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "history": "^4.7.2",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
