--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "history": "^4.7.2",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
-    "react": "^16.3.2",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.3"
