--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
   "dependencies": {
     "babel-loader": "^7.1.4",
     "bundle-loader": "^0.5.6",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "extract-css-chunks-webpack-plugin": "^3.2.1",
     "history": "^4.7.2",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
