--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bundle-loader": "^0.5.6",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
@@ -47,6 +48,7 @@
     "less-loader": "^4.1.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-loadable": "^5.5.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.3"
