--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon bin/www",
     "build": "NODE_ENV=production webpack",
-    "fe-dev": "node webpack.dev.js",
+    "fe-dev": "nodemon webpack.dev.js",
     "start": "webpack-dev-server --devtool eval --inline --hot --colors --mode development"
   },
   "repository": {
@@ -35,6 +35,7 @@
     "webpack-hot-middleware": "^2.24.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "bundle-loader": "^0.5.6",
