--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "history": "^4.7.2",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "mongoose": "^5.3.12",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-loadable": "^5.5.0",
