--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-loadable": "^5.5.0",
+    "react-redux": "^5.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.1",
     "style-loader": "^0.20.3"
   }
 }
